LU-3698 ptlrpc: skip rpcs that fail ptl_send_rpc

ptl_send_rpc is not dealing with -ENOMEM in some
situations.  When the ptl_send_rpc fails we need
set error and skip further processing or trigger
and LBUG

Original patch from Peng Tao.

Signed-off-by: Keith Mannthey <keith.mannthey@intel.com>
Change-Id: Ib90cb7841cd0866bcf08f6dcd702d65804992e1d
Reviewed-on: http://review.whamcloud.com/7411
Tested-by: Hudson
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>